Assets added, scenes added

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="assets/styles/css/style.css"
+      href="assets/styles/scss/style.css"
       media="screen"
     />
     <script src="dist/bundle.js"></script>
   </head>
   <body>
-    <h1>Webpack-Boilerplate</h1>
     <div id="game"></div>
   </body>
 </html>
